--- a/styles/style.css
+++ b/styles/style.css
@@ -197,7 +197,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
 .content__details {
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: space-between;
   gap: 26px;
   width: 100%;
   height: 100%;
@@ -209,6 +209,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
   font-size: 75px;
   text-transform: uppercase;
   line-height: 94%;
+  height: 210px;
 }
 
 .content__accent {
